--- a/src/app/components/user-interface/educacionmod/educacionmod.component.html
+++ b/src/app/components/user-interface/educacionmod/educacionmod.component.html
@@ -46,7 +46,9 @@
                 <img class="certi-certificate" [src]="edu.img_url">
               </a>
               <h4 class="inst-title"> {{edu.tituloYTiempo}}</h4>
-              <p>{{edu.description}}</p>
+              <div class="desc-container">
+                <p>{{edu.description}}</p>
+              </div>
               
             </div>
             
