--- a/src/app/components/login/logform/logform.component.css
+++ b/src/app/components/login/logform/logform.component.css
@@ -87,7 +87,7 @@ input[type="submit"]:hover {
 }
 
 
-/* Para cuando los campos tienen errores */
+/* Para cuando los campos tienen errores o son validos */
 
 .error {
   padding: 2px 0;
