--- a/src/app/components/user-interface/navbarmod/navbarmod.component.html
+++ b/src/app/components/user-interface/navbarmod/navbarmod.component.html
@@ -2,7 +2,7 @@
   <!-- Navbar responsive -->
   <nav class="navbar fixed-top navbar-expand-md navbar-dark">
     <div  class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" (click)="onReload()">
         <img class="logo-img-navbar" src="assets/images/argentina_programa_logo_2.png" alt="Argentina Programa Logo" title="Argentina Programa Logo">
       </a>
       <a class="navbar-brand" id="hero" >
