--- a/src/app/components/inicio/navbar/navbar.component.html
+++ b/src/app/components/inicio/navbar/navbar.component.html
@@ -34,7 +34,7 @@
                 <ul class="dropdown-menu dropdown-menu-end seccion-glass">
                   <!-- Con el routerLink, le decimos que componente cargar -->
                   <li><a routerLink="/login" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-arrow-right-to-bracket"></i> Iniciar sesion</a></li>
-                  <li><a routerLink="/signUp" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-user-plus"></i> Registrarse</a></li>
+                  <!-- <li><a routerLink="/signUp" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-user-plus"></i> Registrarse</a></li> -->
                   <!-- <li  class="dropdown-item seccion-glass-h">Change Theme</li> -->
                 </ul>
               </div>
