--- a/src/app/components/user-interface/proyectosmod/proyectosmod.component.css
+++ b/src/app/components/user-interface/proyectosmod/proyectosmod.component.css
@@ -198,7 +198,7 @@ textarea {
 
 /* --------------------------------------------------------------------------- */
 
-/* boton de editar */
+/* boton de crear */
 
 .cv {
   text-decoration: none;
