--- a/src/app/components/user-inicio/special-hero/special-hero.component.html
+++ b/src/app/components/user-inicio/special-hero/special-hero.component.html
@@ -6,6 +6,6 @@
   <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
     <img class="hero-image-profile" *ngIf="currentUserIn" [src]="currentUserIn.photoURL" alt="Imagen principal" title="Imagen principal">
     <h1 *ngIf="currentUserIn" >Bienvenida/o {{currentUserIn.displayName}}!</h1>
-    <h2>Has iniciado sesion con Google. Click <a class="btn-ir-mensaje" (click)="toMessage()">AQUI</a> para ir a comentarios.</h2>
+    <h2>Esto es una demo para testear login con Google</h2>
   </div>
 </section>
